2011-05-22 Borut Razem <borut.razem AT gmail.net>

	* update_regtests_db.php

2011-05-03 Borut Razem <borut.razem AT gmail.net>

	* index.php: changed Borut's e-mail address
	* left_menu.inc: fixed bug #3296869 - Broken link to wiki

2011-01-19 Borut Razem <borut.razem AT gmail.net>

	* footer.php: changed SourceForge logo

2011-01-16 Borut Razem <borut.razem AT gmail.net>

	* snap.php: search for "invalid instructions"

2010-11-01 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.0.0 release

2010-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: fixed typos
	* left_menu.inc: reverted fix for bug 2938514: was just a glitch at SF

2010-10-23 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 3.0.0 RC2
	* previous.php: added old news

2010-10-10 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 3.0.0 RC1, removed old sdcc 2.9.0 release news
	* previous.php: added old news

2010-09-12 Borut Razem <borut.razem AT siol.net>

	* snap.php: do not sort by the date: files are already sorted
	* index.php: sdas and sdld instead asxxxx, reformatted, ...
	* left_menu.inc: corrected html format

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* snap.php: update file size and date

2010-08-21 Borut Razem <borut.razem AT siol.net>

	* snap.php: snapshot files moved to SourceForge FRS

2010-05-24 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: fixed bug 2938514: "Documentation" link leads to
	  error page

2009-12-19 Borut Razem <borut.razem AT siol.net>

	* images/18dot5a.gif, snap.php:
	  added icon a bue star icon (18dot5a.gif),
	  downloaded from http://bibcyt.ucla.edu.ve/alexandr/ICONOS/,
	  I can't find the original icon archive any more:-(,
	  ChangeLog icon changed to 18dot5a.gif

2009-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: updated link to the forum

2009-09-10 Maarten Brock <sourceforge.brock AT dse.nl>
